Restruturaçao do mvc, implementa funcionalidade de login validaçao de login validaçao de registro

--- a/Backend/Bluvolt/Frontend/Html/contact.html
+++ b/Backend/Bluvolt/Frontend/Html/contact.html
@@ -64,7 +64,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="register.html">Entrar / Cadastrar</a>
+                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="../templates/register.html">Entrar / Cadastrar</a>
                     </li>
                 </ul>
             </div>
