--- a/Backend/Bluvolt/Frontend/Html/blog.html
+++ b/Backend/Bluvolt/Frontend/Html/blog.html
@@ -31,7 +31,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="static/css/style.css">
-    
+
     <script>
     // Conteúdo detalhado dos posts do blog
     const blogContents = {
@@ -182,7 +182,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="register.html">Entrar / Cadastrar</a>
+                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="../templates/register.html">Entrar / Cadastrar</a>
                     </li>
                 </ul>
             </div>
@@ -319,6 +319,5 @@
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/main.js"></script>
-    <script src="static/js/chatbot.js"></script>
 </body>
 </html>
