--- a/Backend/Bluvolt/Frontend/Html/faq.html
+++ b/Backend/Bluvolt/Frontend/Html/faq.html
@@ -64,7 +64,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="register.html">Entrar / Cadastrar</a>
+                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="../templates/register.html">Entrar / Cadastrar</a>
                     </li>
                 </ul>
             </div>
@@ -280,6 +280,5 @@
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/main.js"></script>
-    <script src="static/js/chatbot.js"></script>
 </body>
 </html>
