--- a/Backend/Bluvolt/src/main/resources/static/projects.html
+++ b/Backend/Bluvolt/src/main/resources/static/projects.html
@@ -35,7 +35,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #808080;">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="../templates/index.html">
                 <img src="static/img/logo-bluvolt.webp" alt="BluVolt" class="navbar-logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Início</a>
+                        <a class="nav-link" href="../templates/index.html">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="services.html">Serviços</a>
@@ -64,7 +64,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="register.html">Entrar / Cadastrar</a>
+                        <a class="nav-link btn btn-sm btn-outline-light px-3" href="../templates/register.html">Entrar / Cadastrar</a>
                     </li>
                 </ul>
             </div>
@@ -203,7 +203,7 @@
                 <div class="col-md-4">
                     <h5>Links Rápidos</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-light">Início</a></li>
+                        <li><a href="../templates/index.html" class="text-light">Início</a></li>
                         <li><a href="services.html" class="text-light">Serviços</a></li>
                         <li><a href="projects.html" class="text-light">Projetos</a></li>
                         <li><a href="blog.html" class="text-light">Blog</a></li>
@@ -235,6 +235,5 @@
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/main.js"></script>
-    <script src="static/js/chatbot.js"></script>
 </body>
 </html>
